- diskdrake:
  o add support for 'relatime' mount option
  o default laptops to 'relatime' mount option rather than 'noatime'
  o default all machines to 'relatime' mount option
  o kill support for 'nodiratime' mount option

Version 10.4.168 - 13 August 2007, by Pascal "Pixel" Rigaux

- merge root password step and create user step
- fix checking user creation info (#32517)
- allow to create only one user per default, but add an entry in summary to
  create more users
- authentication method is not configurable anymore for now. 
  should we add it to summary?
- 'ibm_acpi' driver was replaced by 'thinkpad_acpi (#31606)
- internal
  o use urpm::select::get_preferred to choose preferred packages
    (need urpmi library >= 4.10.1)
  o computeGroupSize: do direct requires before choices
    (eg for epiphany: require libmozilla-firefox2.0.0.6 before choosing
    package providing libmozjs.so)

Version 10.4.165 - 10 August 2007, by Thierry Vignaud

- fix detecting sound cards

Version 10.4.164 - 9 August 2007, by Pascal "Pixel" Rigaux

- cache PCI probe results
- use Xconfig::proprietary::pkgs_for_Driver2 from drakx-kbd-mouse-X11 0.21

Version 10.4.162 - 08 August 2007, by Thierry Vignaud

- drakboot:
  o allow choosing another bootloader method when a package cannot be
  installed (occurs on 2008.0 beta1 where mandriva-gfxboot-theme is missing)
- diskdrake:
  o do not show partition types which have no associated filesystem
    for LVM LV (#32326)
- allow using diskdrake even if there is only a lvm PV on full disk available
- fix range max value >2TB when creating a partition (useful for LVs >2TB)
- kill security level step (only reachable from summary now)
- restore progress bar when formatting ext3
- summary screen:
  o warn if the security level will prevent accessing windows partitions
  o reorder steps according to specs
  o render titles in bold

Version 10.4.158 - 3 August 2007, by Pascal "Pixel" Rigaux
