@@ -1,3 +1,4 @@
+- use better default title & icon for banners
 - diskdrake:
   o add support for 'relatime' mount option
   o default laptops to 'relatime' mount option rather than 'noatime'
